# src/ai/ai.controller.ts
@@ -1,0 +1,38 @@
+import { Body, Controller, Get, HttpCode, Param, Post } from '@nestjs/common';
+import { AiService } from './ai.service';
+import {
+  SummarizeArticleAiDto,
+  SummarizeArticleParams,
+} from './dto/summarizeArticle.dto';
+import { NotFoundError } from 'src/errors/NotFoundError';
+
+@Controller('ai')
+export class AiController {
+  constructor(private readonly aiService: AiService) {}
+
+  @Get()
+  async test() {
+    return await this.aiService.test();
+  }
+
+  @Post('articles/:articleId/summarize')
+  @HttpCode(200)
+  async summarizeArticles(
+    @Body() summarizeArticleAiDto: SummarizeArticleAiDto,
+    @Param() params: SummarizeArticleParams,
+  ) {
+    const { articleId } = params;
+    try {
+      const summary = await this.aiService.summarize(
+        summarizeArticleAiDto,
+        articleId,
+      );
+      if (!summary) {
+        throw new NotFoundError('Article not found');
+      }
+      return summary;
+    } catch (err) {
+      throw err;
+    }
+  }
+}
